CUDA subproject works.